-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.2
-
None
-
7b500ed543bb86429ef6fdb82b103784d6cc6a0c, ea9f2aeba6f18d19d6a82b3a829373ec032af14f
QSvgGenerator sets vector-effect to "non-scaling-stroke" by default on the top-level g-node, but according to the SVG specification, the vector-effect is not inherited and has thus no effect on the child nodes. vector-effect needs to be set explicitly to "inherit" or "non-scaling-stroke" on each element with a cosmetic stroke, or set to "none" or omitted on non-cosmetic strokes. To reproduce, run the svggenerator example and generate a car on a road. The outline of the car should have vector-effect="non-scaling-stroke" and the stripes on the road should have vector-effect="none" or no vector-effect specified at all.
- resulted from
-
QTBUG-8711 QSvgRenderer does not handle vector-effect property inheritence correctly (was: QSVGRenderer does not honor width of line)
-
- Open
-