Fixed bounds calculation in QtSvg.

This commit fixes an auto-test failure after fixing QTBUG-8733.
The calculated element bounds should now be much tighter and
respect the width of non-cosmetic pens.

Task-number: QTBUG-8733
Reviewed-by: Trond
(cherry picked from commit ea9f2aeba6f18d19d6a82b3a829373ec032af14f)